Add refactored Factories as tooltips together with has_text condition